--- a/app_i/src/main/res/layout/readinghistory_rv_item.xml
+++ b/app_i/src/main/res/layout/readinghistory_rv_item.xml
@@ -2,6 +2,7 @@
 <androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginEnd="8dp"
@@ -16,35 +17,56 @@
         android:background="?android:attr/selectableItemBackground"
         android:padding="8dp">
     <!--Text view for displaying our text -->
-    <TextView
-        android:id="@+id/text_view_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ellipsize="end"
-        android:maxLines="2"
-        android:textSize="20dp"
-        android:text="Category Text"
-        android:textColor="#343434"
-        android:gravity="center_vertical"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+        <TextView
+            android:id="@+id/text_view_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:layout_toLeftOf="@+id/imgView"
+            android:layout_toStartOf="@+id/imgView"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
+            android:maxLines="3"
+            android:textSize="18dp"
+            android:text="Category Text"
+            android:paddingEnd="5dp"
+            android:paddingRight="5dp"
+            android:textColor="#343434"
+            android:gravity="center_vertical"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
-    <TextView
-        android:id="@+id/text_view_media"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_below="@id/text_view_title"
-        android:text="Description"
-        android:textAppearance="@style/TextAppearance.AppCompat.Small"
-        android:layout_alignParentLeft="true" />
-    <TextView
-        android:id="@+id/text_view_pubtime"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:text="202/03/2418:06:02"
-        android:textAppearance="@style/TextAppearance.AppCompat.Small"
-        android:layout_alignParentRight="true" />
+
+        <TextView
+            android:id="@+id/text_view_pubtime"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentBottom="true"
+            android:layout_below="@id/text_view_title"
+            android:text="2022/03/2418:06:02"
+            android:paddingEnd="5dp"
+            android:paddingRight="5dp"
+            android:textAppearance="@style/TextAppearance.AppCompat.Small"
+            tools:ignore="RtlSymmetry" />
+
+        <TextView
+            android:id="@+id/text_view_media"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Media Name"
+            android:textAppearance="@style/TextAppearance.AppCompat.Small"
+            android:layout_below="@id/text_view_title"
+            android:layout_alignParentBottom="true"
+            android:layout_toRightOf="@+id/text_view_pubtime"
+            android:layout_toEndOf="@+id/text_view_pubtime" />
+        <ImageView
+            android:id="@+id/imgView"
+            app:srcCompat="@drawable/ic_baseline_downloading_24"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            tools:ignore="VectorDrawableCompat" />
     </RelativeLayout>
 </androidx.cardview.widget.CardView>
