--- a/app_i/src/main/res/menu/nav_menu.xml
+++ b/app_i/src/main/res/menu/nav_menu.xml
@@ -15,9 +15,13 @@
     <item android:id="@+id/upload"
         android:title="上傳頁面"
         android:icon="@drawable/ic_baseline_upload_24"/>
+    <item android:id="@+id/nav_update"
+        android:title="軟體更新"
+        android:icon="@drawable/ic_baseline_system_update_24"/>
     <item android:id="@+id/nav_contact"
         android:title="聯絡我們"
         android:icon="@drawable/ic_baseline_email_24"/>
+
 <!--    <item android:id="@+id/nav_contactt"-->
 <!--        android:title="ESM頁面"-->
 <!--        android:icon="@drawable/ic_baseline_email_24"/>-->
