--- a/app_i/src/main/res/layout/activity_notification_range.xml
+++ b/app_i/src/main/res/layout/activity_notification_range.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,25 +8,30 @@
     tools:context=".NotificationRangeActivity">
 
     <LinearLayout
-        android:paddingLeft="40dp"
+        android:paddingStart="40dp"
         android:id="@+id/llReminder"
-        style="@style/settings_item_layout">
+        style="@style/settings_item_layout"
+        tools:ignore="RtlSymmetry">
 
         <TextView
             android:id="@+id/tv_reminder_header"
+            android:textSize="16sp"
             android:paddingTop="30dp"
-            android:paddingLeft="5dp"
+            android:paddingStart="5dp"
             style="@style/settings_header"
-            android:text="@string/sett_reminder_header" />
+            android:text="@string/sett_reminder_header"
+            tools:ignore="RtlSymmetry" />
 
 
         <TextView
             android:id="@+id/tv_reminder_desc"
+            android:textSize="16sp"
             style="@style/settings_details"
-            android:paddingLeft="5dp"
+            android:paddingStart="5dp"
             android:paddingTop="@dimen/items_top_padding"
             android:paddingBottom="@dimen/items_inbetween_space"
-            android:text="@string/sett_reminder_desc" />
+            android:text="@string/sett_reminder_desc"
+            tools:ignore="RtlSymmetry" />
 
         <LinearLayout
             android:id="@+id/ll_set_time"
@@ -43,9 +47,11 @@
                 <TextView
 
                     android:id="@+id/tv_reminder_time_label"
-                    android:paddingLeft="5dp"
+                    android:paddingStart="5dp"
+                    android:textSize="16sp"
                     style="@style/settings_sub_header"
-                    android:text="@string/sett_reminder_time_label"/>
+                    android:text="@string/sett_reminder_time_label"
+                    tools:ignore="RtlSymmetry" />
 
             </RelativeLayout>
 
@@ -53,10 +59,12 @@
             <TextView
                 android:id="@+id/tv_reminder_time_desc"
                 style="@style/settings_details"
-                android:paddingLeft="5dp"
+                android:textSize="16sp"
+                android:paddingStart="5dp"
                 android:paddingTop="@dimen/items_top_padding"
                 android:paddingBottom="@dimen/items_inbetween_space"
-                android:text="@string/sett_reminder_time_content" />
+                android:text="@string/sett_reminder_time_content"
+                tools:ignore="RtlSymmetry" />
 
         </LinearLayout>
         <LinearLayout
@@ -71,10 +79,12 @@
                 android:layout_marginTop="@dimen/items_inbetween_space">
 
                 <TextView
-                    android:paddingLeft="5dp"
+                    android:paddingStart="5dp"
+                    android:textSize="16sp"
                     android:id="@+id/tv_reminder_time_label_e"
                     style="@style/settings_sub_header"
-                    android:text="@string/sett_reminder_time_label_ee"/>
+                    android:text="@string/sett_reminder_time_label_ee"
+                    tools:ignore="RtlSymmetry" />
 
             </RelativeLayout>
 
@@ -82,25 +92,49 @@
             <TextView
                 android:id="@+id/ee_tv_reminder_time_desc"
                 style="@style/settings_details"
-                android:paddingLeft="5dp"
+                android:textSize="16sp"
+                android:paddingStart="5dp"
                 android:paddingTop="@dimen/items_top_padding"
                 android:paddingBottom="@dimen/items_inbetween_space"
-                android:text="@string/sett_reminder_time_content" />
+                android:text="@string/sett_reminder_time_content"
+                tools:ignore="RtlSymmetry" />
 
         </LinearLayout>
 
-        <Button
-            android:id="@+id/button_s"
+<!--        <Button-->
+<!--            android:id="@+id/button_s"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+
+<!--            android:text="儲存設定" />-->
+
+<!--        <Button-->
+<!--            android:id="@+id/button_restart"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:text="重置問卷時間(發送端)" />-->
+
+<!--        <Switch-->
+<!--            android:id="@+id/switch1"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:paddingLeft="5dp"-->
+<!--            android:text="每天" />-->
+        <Switch
+            android:id="@+id/switch_Above"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-
-            android:text="儲存設定" />
-
-        <Button
-            android:id="@+id/button_restart"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="重置問卷時間(發送端)" />
+            android:layout_gravity="right"
+            android:checked="false"
+            android:showText="true"
+            android:textOff="  Off  "
+            android:textOn="  On  "
+            android:paddingEnd="25dp"
+            android:thumb="@drawable/ex1_switch_thumb"
+            android:track="@drawable/ex1_switch_track"
+            tools:ignore="UseSwitchCompatOrMaterialXml" />
     </LinearLayout>
+
+
 
 </LinearLayout>
