--- a/app_i/src/main/res/layout/activity_update.xml
+++ b/app_i/src/main/res/layout/activity_update.xml
@@ -6,14 +6,12 @@
     android:layout_height="match_parent">
     <LinearLayout
         android:id="@+id/layout_inside"
-        tools:context=".UploadPagesActivity"
+        tools:context=".CheckUpdateActivity"
         android:orientation="vertical"
         android:gravity="center_horizontal|center_vertical"
         android:layout_gravity="center_horizontal"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
-
 
         <TextView
             android:id="@+id/uptextview"
